[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "movex"
version = "0.3.0"
description = "MoveX: fast PostgreSQL schema transfer CLI + Python library"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Indilabs" }]
dependencies = [
  "psycopg2-binary>=2.9.9",
  "questionary>=2.0.1",
  "rich>=13.7.1",
]

[project.scripts]
movex = "movex.cli:main"
db-migrate = "movex.cli:main"

[tool.setuptools.packages.find]
include = ["movex*"]
